--- a/assets/scss/font-awesome-ie7.scss
+++ b/assets/scss/font-awesome-ie7.scss
@@ -75,7 +75,7 @@ a [class*=" icon-"] {
   cursor: pointer;
 }
 
-@mixin ie7icon($inner) { *zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '#{$inner}'); }
+/*@mixin ie7icon($inner) { *zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '#{$inner}'); }*/
 
 
 .icon-glass {
