--- a/sistema/css/style.css
+++ b/sistema/css/style.css
@@ -110,14 +110,28 @@
 
 #signup {
     margin: 0px;
-    padding: 3px 0px 9px;
-    color: rgb(255, 255, 255);
+    padding: 10px 0px 9px;
+    color: rgba(0, 46, 165, 0.9);
     font-size: 32px;
     width: 100%;
     text-align: center;
     font-weight: normal;
-    background: #76ABDB;
+    /*background: #76ABDB;*/
     font-size: 22px;
+    position: relative;
+}
+#signupImg1 {
+    margin: 0px;
+    padding: 5px 0px 9px;
+    /*font-size: 32px;*/
+    width: 100%;
+    text-align: left;
+    font-weight: normal;
+    background: #FFFFFF;
+    /*background: #76ABDB;*/
+    /*font-size: 22px;*/
+    position: absolute;
+    
 }
 
 #signupb {
@@ -174,7 +188,8 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.32);
+    /*background: rgba(0, 0, 0, 0.32);*/
+    background: rgba(71, 108, 186, 0.6);
     box-shadow: inset 0 0 376px rgba(0, 0, 0, 0.22);
     z-index: 9999;
     display: none;
