--- a/jscss/jquery.bxslider.css
+++ b/jscss/jquery.bxslider.css
@@ -35,7 +35,8 @@
 	/*box-shadow: 0 0 5px #ccc;*/
 	/*border:  5px solid #fff;*/
 	left: -5px;
-	background: #fff;
+	background: #D9EDF7;
+	/*background: #fff;*/
 	
 	/*fix other elements on the page moving (on Chrome)*/
 	-webkit-transform: translatez(0);
@@ -98,7 +99,7 @@
 
 .bx-wrapper .bx-pager.bx-default-pager a:hover,
 .bx-wrapper .bx-pager.bx-default-pager a.active {
-	background: #000;
+	background: #999;
 }
 
 /* DIRECTION CONTROLS (NEXT / PREV) */
