--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4119,9 +4119,13 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-fixed-top .navbar-collapse,
 .navbar-fixed-bottom .navbar-collapse {
-  max-height: 340px;
+  max-height: 320px;
+  /*max-height: 340px;*/
 }
-@media (max-device-width: 480px) and (orientation: landscape) {
+
+
+@media (min-device-width: 320px) and (max-device-width: 480px) and (orientation: landscape) {
+/*@media (max-device-width: 480px) and (orientation: landscape)*/
   .navbar-fixed-top .navbar-collapse,
   .navbar-fixed-bottom .navbar-collapse {
     max-height: 200px;
@@ -4218,11 +4222,16 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-toggle .icon-bar + .icon-bar {
   margin-top: 4px;
 }
-@media (min-width: 768px) {
+@media (min-width: 320px) {
   .navbar-toggle {
     display: none;
   }
 }
+/*@media (min-width: 768px) {
+  .navbar-toggle {
+    display: none;
+  }
+}*/
 .navbar-nav {
   margin: 7.5px -15px;
 }
@@ -4421,8 +4430,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  color: #555;
-  background-color: #e7e7e7;
+  color: #FFF;
+  /*color: #555;*/
+  background-color: #38B0DE;
+  /*background-color: #e7e7e7;*/
 }
 .navbar-default .navbar-nav > .disabled > a,
 .navbar-default .navbar-nav > .disabled > a:hover,
