Alteração de estilos e fontes.

--- a/css/icone_slider.css
+++ b/css/icone_slider.css
@@ -59,17 +59,24 @@ body {
 	font-size: 30px;
 	color: #FFF;
 	padding-left: 76px;
-	padding-top: 20px;
+        
+	padding-right: 76px;
+	
+        padding-top: 20px;
 	text-shadow: 2px 2px 12px #000000;
-	max-width: 600px;
+	max-width: 100%;
+	/*max-width: 600px;*/
 }
 .banner_texto2 p{
-	font-family: Aller;
+	/*font-family: Aller;*/
+	font-family: arial;
 	margin: 0px;
 	padding-top: 0px;
 	padding-right: 0px;
 	padding-bottom: 2px;
 	padding-left: 0px;
+        
+        text-align: right;
 }
 .banner_texto3{
 	font-size: 22px;
