--- a/css/estilo.css
+++ b/css/estilo.css
@@ -61,6 +61,7 @@
         font-size: 10px;
         font-weight: 400;
         letter-spacing: 2px;
+        font-family: arial;
 }
 
 .navbar-text-top > div > div > span
@@ -68,7 +69,8 @@
         color: #31708f;
         font-size: 36px;
 /*        font-size: 29px;*/
-        letter-spacing: 8px;
+        /*letter-spacing: 8px;*/
+        
         /*letter-spacing: 14px;*/
 }  
 .navbar-text-top > div > div > div > a > span
@@ -248,6 +250,7 @@ div.WordSection1
   .navbar-fixed-top .navbar-collapse,
   .navbar-fixed-bottom .navbar-collapse {
     display: none;
+    
   }
 }
 /* Smartphones landscape */
