--- a/css/estilo.css
+++ b/css/estilo.css
@@ -502,7 +502,7 @@ div.WordSection1
 {
     font-family: garamond;
     font-size: 18px;
-    text-align: left;
+    text-align: center;
     color: #fff;
     /*color: #1f226d;*/
 }
@@ -527,3 +527,36 @@ div.WordSection1
     outline: 0;
 }
 
+.banner_texto_estilo1{
+	font-size: 42px;
+	color: #FFF;
+        min-width: 100%;
+        top: 0;
+        left: 0;
+        height: 470px;
+/*	text-transform: none;
+        text-align: center;*/
+	text-shadow: 2px 2px 12px #000000;
+	/*padding-top: 0px;*/
+
+}
+.banner_texto_estilo2{
+	font-size: 24px;
+	color: #FFF;
+        text-align: right;
+	padding-left: 0;
+	padding-right: 0;
+        right: 150px;
+        /*position: absolute;*/
+	max-width: 100%;
+}
+.banner_texto_estilo3{
+	font-size: 24px;
+	color: #FFF;
+        text-align: left;
+	padding-left: 0;
+	padding-right: 0;
+        left: 50px;
+        /*position: absolute;*/
+	max-width: 100%;
+}
