--- a/css/icone_slider1.css
+++ b/css/icone_slider1.css
@@ -4,20 +4,49 @@
 @import url("../../webfonts/Aller_Light/stylesheet.css");
 
 
-body {
-	/* [disabled]font-size: 0px; */
-	margin: 0px;
-
+@media only screen and (min-height: 400px)
+{
+    .icone_slider{
+/*        height: 100%;*/
+        background-repeat: no-repeat;
+        background-size: cover;
+        /* [disabled]margin: 0px; */
+        background-position: center center;
+        /* [disabled]background-color: #FC0; */
+        padding: 0px;
+        padding-top: 30px;
+        
+    }
 }
-.icone_slider {
+@media only screen and (min-height: 529px)
+{
+    .icone_slider{
 	height: 529px;
+	/*height: 529px;*/
 	background-repeat: no-repeat;
 	background-size: cover;
 	/* [disabled]margin: 0px; */
 	background-position: center center;
 	/* [disabled]background-color: #FC0; */
 	padding: 0px;
-	/* [disabled]top: -20px; */
+        
+    }
+}
+
+body {
+	/* [disabled]font-size: 0px; */
+	margin: 0px;
+
+}
+.icone_slider {
+	/*min-height: 529px;*/
+        max-height: 600px;
+        /*max-height: 600px;*/
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+	padding: 0px;
+        padding-top: 30px;
 }
 
 .banner_box{
@@ -25,11 +54,13 @@ body {
 	/* [disabled]height: 400px; */
 	margin: 0px;
 	padding: 0px;
+        /*heightco: 100%;*/
 }
 .banner{
 	/* [disabled]background-color: #FF0; */
 	margin: 0px;
 	padding: 0px;
+        /*height: 100%;*/
 	/* [disabled]position: absolute; */
 	/* [disabled]top: 100px; */
 	/* [disabled]width: 100%; */
@@ -37,7 +68,7 @@ body {
 .banner ul{
 	list-style-type: none;
 	padding: 0px;
-	background-color: #999;
+	/*background-color: #999;*/
 	margin: 0px;
 }
 .banner ul li{
@@ -49,8 +80,8 @@ body {
 	text-transform: none;
 	text-shadow: 2px 2px 12px #000000;
 	font-family: Aller;
-	padding-top: 100px;
-	padding-left: 76px;
+	padding-top: 20px;
+	/*padding-left: 76px;*/
 	font-style: normal;
 	font-weight: normal;
 	font-variant: normal;
@@ -59,22 +90,29 @@ body {
 	font-size: 30px;
 	color: #FFF;
 	padding-left: 76px;
-	padding-top: 20px;
+        
+	padding-right: 76px;
+	
+        padding-top: 20px;
 	text-shadow: 2px 2px 12px #000000;
-	max-width: 600px;
+/*	max-width: 100%;*/
+	/*max-width: 600px;*/
 }
 .banner_texto2 p{
-	font-family: Aller;
+	/*font-family: Aller;*/
+	font-family: arial;
 	margin: 0px;
 	padding-top: 0px;
 	padding-right: 0px;
 	padding-bottom: 2px;
 	padding-left: 0px;
+        
+        text-align: right;
 }
 .banner_texto3{
 	font-size: 22px;
 	color: #FFF;
-	padding-left: 76px;
+	/*padding-left: 76px;*/
 	padding-top: 30px;
 	text-shadow: 2px 2px 12px #000000;
 	max-width: 500px;
@@ -98,15 +136,38 @@ body {
 .banner_botao a:hover{
 	background-color: #F90;
 }
-@media only screen and (max-width : 1024px) {
-	.icone_slider {
-	height: 400px;
+@media only screen and (max-height : 500px) {
+	.icone_slider{  
+            height: 380px;
+            width: 100%;
+/*	height: 100%;*/
 	}
 	.banner_texto1{
 	font-size: 42px;
 	padding-top: 20px;
-
+        }
 }
+/*@media only screen and (max-height : 500px) {
+	.icone_slider {
+            height: 400px;
+	height: 100%;
+	}
+	.banner_texto1{
+	font-size: 42px;
+	padding-top: 20px;
+        }
+}*/
+@media only screen and (min-height : 1195px) {
+	.icone_slider {
+	height: 1024px;
+        padding-top: 50px;
+	/*height: 400px;*/
+	}
+	.banner_texto1{
+	font-size: 42px;
+	padding-top: 50px;
+
+        }
 }
 @media only screen and (max-width : 640px) {
 	.icone_slider {
