--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,45 +2,6 @@
 /*html, body, div, iframe {margin: 0px; padding: 0px}*/
 /*iframe{width: 100%; border: none; position: absolute}*/
 
-@media only screen and (max-width: 959px) {
-    span, a{
-        font-size: 10px;
-    }
-}
-
-/* Tablet Portrait size to standard 960 (devices and browsers) */
-@media only screen and (min-width: 768px) and (max-width: 959px) {
-    span, a{
-        font-size: 12px;
-    }
-}
-/*@media only screen and (min-width: 600px) and (max-width: 820px) {
-    span, a{
-        font-size: 12px;
-    }
-    
-}*/
-
-/* All Mobile Sizes (devices and browser) */
-@media only screen and (max-width: 767px) {
-    span, a{
-        font-size: 14px;
-    }
-}
-
-/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-    span, a{
-        font-size: 9px;
-    }
-}
-
-/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
-@media only screen and (max-width: 479px) {
-    span, a{
-        font-size: 7px;
-    }
-}
 
 .bodyColorYellow
 {
@@ -250,7 +211,7 @@ div.WordSection1
     
 }
 
-@media screen and (max-width: 767px){
+/*@media screen and (max-width: 767px){
     header .control-nav{
         position: absolute;
         right: 20px;
@@ -302,7 +263,7 @@ div.WordSection1
         -ms-transform: translate(100%,0);
         transform: translate(100%,0);
     }
-}
+}*/
 
 #corAzulTransparente
 {
@@ -327,25 +288,15 @@ div.WordSection1
 #corAzulInfo
 {
     background-color: rgb(217, 237, 247);
-    /*background-color: #D9EDF7;*/
-    /*border-bottom-color: #1f226d;*/
-    /*border-color: #1f226d;*/
-    /*border-top-color: #1f226d;*/
+
 }
 #corAzulInfo1
 {
     background-color: rgb(217, 237, 247);
-    /*background-color: #D9EDF7;*/
-    /*border-bottom-color: #1f226d;*/
-    /*border-color: #1f226d;*/
-    /*border-top-color: #1f226d;*/
 }
 #corAzulFundoClaro
 {
     background-color: rgba(173, 216, 230, 0.3); /* R, G, B, Opacity */
-    /*background-color: rgba(45, 124, 255, 0.3);  R, G, B, Opacity */
-/*    background-color: #87CEEB;*/
-    /*background-color: #EFF8FB;*/
     border-bottom-color: #1f226d;
 }
 #corBodyLaranja
@@ -356,9 +307,7 @@ div.WordSection1
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-/*  color: #FFF;*/
   background-color: #2D3192;
-  /*background-color: #38B0DE;*/
 }
 
 #corTabela > td:hover
@@ -396,7 +345,7 @@ div.WordSection1
     background: #D9EDF7 url('../images/logoRUV550x430.png') no-repeat center;
     min-width: 600px;
     width: 100%;
-    background-color: rgba(150, 150, 150, 0.3);
+    /*background-color: rgba(150, 150, 150, 0.3);*/
 /*    background-image: url('../images/logoRedeUnaViva.png');
     background-repeat: no-repeat;
     background-position: center center;
@@ -408,11 +357,19 @@ div.WordSection1
     /*background-color: #D9EDF7;*/
 }
 
+#imagemRUVFundoBlue
+{
+    background: #1874CD url('../images/logoRUVBlue.png') no-repeat center;
+    /*min-width: 600px;*/
+    width: 100%;
+    height: 529px;
+}
 #imagemRUVCDoggerBlue3
 {
     background: #1874CD url('../images/logoRUVWhite.png') no-repeat center;
-    min-width: 600px;
+    /*min-width: 600px;*/
     width: 100%;
+    /*height: 529px;*/
 }
 #imagemRUVCDeepSkyBlue3
 {
@@ -570,6 +527,686 @@ div.WordSection1
 	max-width: 100%;
 }
 
+/*@media only screen and (-webkit-min-device-pixel-ratio: 2){
+    
+}*/
+
+#endereco
+{
+    padding-left: 9px;
+    font-size: 16px;
+    font-weight: bold;
+}
+#imgTelefone
+{
+/*    width: 20px;
+    height: 20px;*/
+    padding-left: 9px;
+}
+
+#logoTextoRuv
+{
+    width: 150px; 
+    height: 39px;    
+}
+#imageHanzipen
+{
+    width: 170px;
+    height: 23px;
+}
+
+#sub{
+    text-align: center; 
+    font-size: 20px; 
+    font-family: arial;    
+}
+#textoBaixo
+{
+    text-align: right;
+    font-size: 24px;
+    font-family: arial;
+}
+
+#linkMenu
+{
+    /*color: #b87c04;*/
+    color: rgba(184, 124, 4, 0.9);
+}
+#linkMenu:hover
+{
+    font-weight: bold;
+    /*font-size: 15px;*/
+}
+@media only screen and (min-width: 240px) and (max-width: 269px){
+    #imagemRUVCentro
+    {
+        max-width: 350px;
+        max-height: 290px;
+        width: auto;
+        height: auto;
+        margin: 0 auto;
+        padding-bottom: 50px;
+        border: 1px solid;
+    }
+    #imagemRUVFundoBlue
+    {
+        max-width: 350px;
+        max-height: 290px;
+        width: auto;
+        /*height: auto;*/
+        /*height: 350px;*/
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+
+    }
+
+    #textoBaixo
+    {
+        font-size: 12px;
+        padding-top: 100px;
+    }
+    .banner_texto1
+    {
+        font-size: 24px;
+    }
+    .banner_texto2
+    {
+        font-size: 12px;
+        padding-top: 150px;
+        /*padding-bottom: 650px;*/
+	/*font-size: 30px;*/
+	color: #FFF;
+	padding-left: 30px;
+	padding-right: 10px;
+	/*text-shadow: 2px 2px 12px #000000;*/
+    }
+    #sub
+    {
+        font-size: 12px;
+    }
+    #imagemRUVCDoggerBlue3
+    {
+        min-width: 0;
+        width: 100%;
+        height: 350px;
+        background-size: cover;
+    }
+    body
+    {
+        height: 100%;
+        width: 100%;
+        padding-top: 0;
+    }
+    #logoTextoRuv
+    {
+        width: 100px; 
+        height: 30px;    
+    }
+    #imageHanzipen
+    {
+        width: 230px;
+        height: 23px;
+        padding-left: 25px;
+    }
+    #endereco
+    {
+        font-size: 8px;
+        padding-left: 9px;
+    }
+    #imgTelefone
+    {
+        width: 17px;
+        height: 16px;
+        padding-left: 2px;
+    }
+    #menuBaixo
+    {
+        font-size: 14px;
+    }
+}
+@media only screen and (min-width: 270px) and (max-width: 320px){
+    #imagemRUVCentro
+    {
+        max-width: 350px;
+        max-height: 290px;
+        width: auto;
+        height: auto;
+        margin: 0 auto;
+        padding-bottom: 50px;
+        border: 1px solid;
+    }
+    #imagemRUVFundoBlue
+    {
+        max-width: 350px;
+        max-height: 290px;
+        width: auto;
+        /*height: auto;*/
+        /*height: 350px;*/
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+
+    }
+    #textoBaixo
+    {
+        font-size: 12px;
+        padding-top: 100px;
+    }
+    .banner_texto1
+    {
+        font-size: 24px;
+    }
+    .banner_texto2
+    {
+        font-size: 12px;
+        padding-top: 150px;
+        /*padding-bottom: 650px;*/
+	/*font-size: 30px;*/
+	color: #FFF;
+	padding-left: 30px;
+	padding-right: 10px;
+	/*text-shadow: 2px 2px 12px #000000;*/
+    }
+    #sub
+    {
+        font-size: 12px;
+    }
+    #imagemRUVCDoggerBlue3
+    {
+        min-width: 0;
+        width: 100%;
+        height: 350px;
+        background-size: cover;
+    }
+    body
+    {
+        height: 100%;
+        width: 100%;
+        padding-top: 0;
+    }
+    #logoTextoRuv
+    {
+        width: 130px; 
+        height: 30px;    
+    }
+    #imageHanzipen
+    {
+        width: 230px;
+        height: 23px;
+        padding-left: 25px;
+    }
+    #endereco
+    {
+        font-size: 8px;
+        padding-left: 9px;
+    }
+    #imgTelefone
+    {
+        width: 17px;
+        height: 16px;
+        padding-left: 9px;
+    }
+    #menuBaixo
+    {
+        font-size: 14px;
+    }
+}
+@media only screen and (min-width: 320px) and (max-width: 375px){
+    #imagemRUVCentro
+    {
+        max-width: 350px;
+        max-height: 290px;
+        width: auto;
+        height: auto;
+        margin: 0 auto;
+        padding-bottom: 50px;
+        border: 1px solid;
+    }
+    #imagemRUVFundoBlue
+    {
+        max-width: 350px;
+        max-height: 290px;
+        width: auto;
+        /*height: auto;*/
+        /*height: 350px;*/
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+
+    }
+    #textoBaixo
+    {
+        font-size: 12px;
+        padding-top: 130px;
+    }
+    .banner_texto1
+    {
+        font-size: 24px;
+    }
+    .banner_texto2
+    {
+        font-size: 12px;
+        padding-top: 150px;
+	color: #FFF;
+	padding-left: 30px;
+	padding-right: 10px;
+    }
+    #sub
+    {
+        font-size: 12px;
+    }
+    #imagemRUVCDoggerBlue3
+    {
+        min-width: 0;
+        width: 100%;
+        height: 350px;
+        background-size: cover;
+    }
+    body
+    {
+        height: 100%;
+        width: 100%;
+        padding-top: 0;
+    }
+    #logoTextoRuv
+    {
+        width: 130px; 
+        height: 30px;    
+    }
+    #imageHanzipen
+    {
+        width: 230px;
+        height: 23px;
+        padding-left: 25px;
+    }
+    #imgTelefone
+    {
+        width: 17px;
+        height: 16px;
+        padding-left: 9px;
+    }
+    #menuBaixo
+    {
+        font-size: 14px;
+    }
+    #endereco
+    {
+        font-size: 9px;
+        padding-left: 5px;
+    }
+}
+@media only screen and (min-width: 375px) and (max-width: 384px){
+    #imagemRUVCentro
+    {
+        max-width: 350px;
+        max-height: 290px;
+        width: auto;
+        height: auto;
+        margin: 0 auto;
+        padding-bottom: 50px;
+        border: 1px solid;
+    }
+    #imagemRUVFundoBlue
+    {
+        max-width: 350px;
+        max-height: 290px;
+        width: auto;
+        /*height: auto;*/
+        /*height: 350px;*/
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+
+    }
+    #textoBaixo
+    {
+        font-size: 12px;
+        padding-top: 130px;
+    }
+    .banner_texto1
+    {
+        font-size: 24px;
+    }
+    .banner_texto2
+    {
+        font-size: 12px;
+        padding-top: 150px;
+	color: #FFF;
+	padding-left: 30px;
+	padding-right: 10px;
+    }
+    #sub
+    {
+        font-size: 12px;
+    }
+    #imagemRUVCDoggerBlue3
+    {
+        min-width: 0;
+        width: 100%;
+        height: 350px;
+        background-size: cover;
+    }
+    body
+    {
+        height: 100%;
+        width: 100%;
+        padding-top: 0;
+    }
+    #logoTextoRuv
+    {
+        width: 130px; 
+        height: 30px;    
+    }
+    #imageHanzipen
+    {
+        width: 230px;
+        height: 23px;
+        padding-left: 25px;
+    }
+    #imgTelefone
+    {
+        width: 17px;
+        height: 16px;
+        padding-left: 9px;
+    }
+    #menuBaixo
+    {
+        font-size: 14px;
+    }
+    #endereco
+    {
+        font-size: 12px;
+        padding-left: 9px;
+    }
+}
+@media only screen and (min-width: 385px) and (max-width: 414px){
+    #imagemRUVCentro
+    {
+        max-width: 100%;
+        max-height: 100%;
+        width: auto;
+        height: auto;
+        margin: 0 auto;
+        padding-bottom: 50px;
+        border: 1px solid;
+    }
+    #imagemRUVFundoBlue
+    {
+        max-width: 100%;
+        max-height: 350px;
+        width: auto;
+        /*height: auto;*/
+        /*height: 350px;*/
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+
+    }
+    #textoBaixo
+    {
+        font-size: 12px;
+        padding-top: 130px;
+    }
+    .banner_texto1
+    {
+        font-size: 24px;
+    }
+    .banner_texto2
+    {
+        font-size: 12px;
+        padding-top: 150px;
+	color: #FFF;
+	padding-left: 30px;
+	padding-right: 10px;
+    }
+    #sub
+    {
+        font-size: 12px;
+    }
+    #imagemRUVCDoggerBlue3
+    {
+        min-width: 0;
+        width: 100%;
+        height: 350px;
+        background-size: cover;
+    }
+    body
+    {
+        height: 100%;
+        width: 100%;
+        padding-top: 20px;
+    }
+    #logoTextoRuv
+    {
+        width: 130px; 
+        height: 30px;    
+    }
+    #imageHanzipen
+    {
+        width: 230px;
+        height: 23px;
+        padding-left: 25px;
+    }
+    #menuBaixo
+    {
+        font-size: 14px;
+    }
+    #endereco
+    {
+        font-size: 11px;
+        padding-left: 9px;
+    }
+    #imgTelefone
+    {
+        width: 10px;
+        height: 10px;
+        padding-left: 10px;
+    }
+    
+}
+@media only screen and (min-width: 414px) and (max-width: 568px){
+    #imagemRUVCentro
+    {
+        max-width: 568px;
+        max-height: 350px;
+        width: auto;
+        height: auto;
+        margin: 0 auto;
+        padding-bottom: 50px;
+        border: 1px solid;
+    }
+    #imagemRUVFundoBlue
+    {
+        max-width: 568px;
+        max-height: 350px;
+        width: auto;
+        /*height: auto;*/
+        /*height: 350px;*/
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+
+    }
+    #textoBaixo
+    {
+        font-size: 14px;
+        padding-top: 100px;
+    }
+    .banner_texto1
+    {
+        font-size: 24px;
+    }
+    .banner_texto2
+    {
+        font-size: 14px;
+        padding-top: 170px;
+	color: #FFF;
+	padding-left: 30px;
+	padding-right: 10px;
+    }
+    #sub
+    {
+        font-size: 12px;
+    }
+    #imagemRUVCDoggerBlue3
+    {
+        min-width: 0;
+        width: 100%;
+        height: 350px;
+        background-size: cover;
+    }
+    body
+    {
+        height: 100%;
+        width: 100%;
+        padding-top: 20px;
+    }
+    #logoTextoRuv
+    {
+        width: 130px; 
+        height: 30px;    
+    }
+    #imageHanzipen
+    {
+        width: 230px;
+        height: 23px;
+        padding-left: 25px;
+    }
+    #menuBaixo
+    {
+        font-size: 14px;
+    }
+    #endereco
+    {
+        font-size: 14px;
+        padding-left: 5px;
+    }
+    #imgTelefone
+    {
+        width: 18px;
+        height: 18px;
+        padding-left: 5px;
+    }
+}
+
+@media only screen and (min-width: 569px) and(max-width: 690px){
+    .imagemRUVCentro
+    {
+        max-width: 690px;
+        max-height: 350px;
+        width: auto;
+        height: auto;
+        margin: 0 auto;
+        padding-bottom: 50px;
+        border: 1px solid;
+    }
+    #imagemRUVCDoggerBlue3
+    {
+        max-width: 550px;
+        max-height: 350px;
+        width: auto;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+
+    }
+    #imagem1
+    {
+        max-width: 100%;
+        max-height: 550px;
+        width: auto;
+        height: auto;
+        /*height: auto;*/
+        /*height: 350px;*/
+        background-size: cover;
+        background-repeat: no-repeat;
+
+    }
+    #textoBaixo
+    {
+        font-size: 14px;
+        padding-top: 100px;
+    }
+    .banner_texto1
+    {
+        font-size: 24px;
+    }
+    .banner_texto2
+    {
+        font-size: 14px;
+        padding-top: 170px;
+	color: #FFF;
+	padding-left: 30px;
+	padding-right: 10px;
+    }
+    #sub
+    {
+        font-size: 12px;
+    }
+    #imagemRUVCDoggerBlue3
+    {
+        min-width: 0;
+        width: 100%;
+        height: 350px;
+        background-size: cover;
+    }
+    body
+    {
+        height: 100%;
+        width: 100%;
+        padding-top: 20px;
+    }
+    #logoTextoRuv
+    {
+        width: 130px; 
+        height: 30px;    
+    }
+    #imageHanzipen
+    {
+        width: 230px;
+        height: 23px;
+        padding-left: 25px;
+    }
+    #menuBaixo
+    {
+        font-size: 14px;
+    }
+    #endereco
+    {
+        font-size: 14px;
+        padding-left: 5px;
+    }
+    #imgTelefone
+    {
+        width: 18px;
+        height: 18px;
+        padding-left: 5px;
+    }
+    
+}
+@media only screen and (min-width: 691px) and(max-width: 900px){
+    footer #menuBaixo
+    {
+        -webkit-transition: all 500ms ease;
+        transition: all 500ms ease;
+        -webkit-transform: translate(50%, 0);
+        -ms-transform: translate(50%, 0);
+        transform: translate(50%, 0);
+        z-index: 1;
+    }
+    footer #botao
+    {
+        display: inline-block;
+        float: right;
+        
+        -webkit-transform: translate(0, 0);
+        -ms-transform: translate(0, 0);
+        transform: translate(0, 0);        
+    }
+    
+    
+}
 /* mudar */
 /*@media only screen and (min-height : 1195px) {
     navbar-header navbar-text-top container-fluid
@@ -640,4 +1277,16 @@ div.WordSection1
 {
     text-decoration: none;
     color: #fff;
+}
+#linkDownloads
+{
+    text-decoration: none;
+    color: #000;
+    font-weight: bold;
+}
+#linkDownloads:hover
+{
+    text-decoration: none;
+    color: #000;
+    font-weight: normal;
 }
